--- a/http/src/index.html
+++ b/http/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angularhttp</title>
+  <title>Angularhttp | Tvmaze API</title>
   <base href="/">
   <script
   src="https://code.jquery.com/jquery-3.2.0.min.js"
