--- a/angularmlb/src/index.html
+++ b/angularmlb/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </body>
 </html>
