--- a/angularmlb/src/index.html
+++ b/angularmlb/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Angularmlb</title>
-  <base href="/mlb/">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
