--- a/calorieTracker/src/index.html
+++ b/calorieTracker/src/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>CalorieTracker</title>
-  <base href="/calorietracker/">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link href="https://fonts.googleapis.com/css?family=Unlock" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
