--- a/chat/src/index.html
+++ b/chat/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Top Photo</title>
+  <title>Photo Talk</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./src/styles.css" rel="stylesheet">
