--- a/chat/src/index.html
+++ b/chat/src/index.html
@@ -5,8 +5,8 @@
   <title>Photo Talk</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./src/styles.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="src/styles.css" rel="stylesheet">
 </head>
 <body>
   <app-root>Loading...</app-root>
